# weather_forecast

./: .env_sample  README.md  coverage_report.html  pyproject.toml
common/: mixins.py
config/: settings.py  urls.py
static/css/: base.css
users/: forms.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/users/: base.html  login.html  register.html
weather/: admin.py  forms.py  models.py  paginators.py  permissions.py  serializers.py  services.py  tests.py  urls.py  views.py
weather/migrations/: 0001_initial.py
weather/templates/weather/: base.html  current_weather.html  weather_search.html
weather/templates/weather/includes/: inc_main_menu.html
